...
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <inset key="imageEdgeInsets" minX="-14" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                    <state key="normal" title="Playlists">
                                                        <color key="titleColor" systemColor="systemBlueColor"/>
                                                        <imageReference key="image" image="music.note.list" catalog="system" symbolScale="large"/>
...
                        </barButtonItem>
                        <rightBarButtonItems>
                            <barButtonItem systemItem="edit" id="1Hc-8D-vSo"/>
                            <barButtonItem systemItem="add" id="YQw-aj-f5h">
                                <connections>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jason Mraz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ti-J9-K2M">
                                            <rect key="frame" x="64.5" y="14" width="285" height="21"/>
                                            <accessibility key="accessibilityConfiguration" identifier="artist"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="21" id="Uyg-AB-tvC"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I'm yours ft. Alicia Keys" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydJ-b1-eq3">
                                            <rect key="frame" x="64.5" y="33" width="285" height="21"/>
                                            <accessibility key="accessibilityConfiguration" identifier="title"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                            <color key="textColor" red="0.28709925518134716" green="0.28709925518134716" blue="0.28709925518134716" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qFI-N6-2xu">
                                            <rect key="frame" x="368.5" y="52" width="29.5" height="35"/>
                                            <accessibility key="accessibilityConfiguration" identifier="move"/>
                                            <state key="normal">
                                                <imageReference key="image" image="folder.fill" catalog="system" symbolScale="large"/>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlf-hJ-r1x">
                                            <rect key="frame" x="26" y="20" width="30.5" height="29"/>
                                            <accessibility key="accessibilityConfiguration" identifier="play"/>
                                            <state key="normal">
                                                <imageReference key="image" image="play.fill" catalog="system" symbolScale="large"/>
...
                                    </barButtonItem>
                                    <barButtonItem width="215" style="plain" systemItem="fixedSpace" id="M1n-al-uum"/>
                                    <barButtonItem title="Done" width="30" id="wPS-Zw-204">
                                        <connections>
                                            <action selector="doneTapped:" destination="b3b-NK-W9D" id="4aY-y6-Rqx"/>
...
